[aliases]
test=pytest

[metadata]
description-file = README.md

[tool:pytest]
addopts = --durations=10 --cov chalice_atlassian_connect --cov-report term-missing -x chalice_atlassian_connect/tests

[semantic_release]
upload_to_pypi=False
version_variable=chalice_atlassian_connect/__init__.py:__version__

[build_sphinx]
source-dir = docs/
build-dir = docs/build
all_files = 1

[flake8]
ignore = E501

[zest.releaser]
python-file-with-version = chalice_atlassian_connect/__init__.py

[check-manifest]
ignore =
    docs/build
    docs/build/*
